--- a/NFT Site/index.css
+++ b/NFT Site/index.css
@@ -11,19 +11,25 @@ h3 {
     margin: 0;
 }
 
+/*
+  Challenge:
+   - Convert the font-size values of the
+     h1, h2, h3 and .subheading class from px to em
+*/
+
 h1 {
     color: whitesmoke;
-    font-size: 36px;
+    font-size: 2.25em; /* 36/16 = 2.25 */
 }
 
 h2 {
     color: #451c7a;
-    font-size: 28px;
+    font-size: 1.75em; /* 28/16 = 1.75 */
     margin-top: 0;
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 1.25em; /* 20/16 = 1.25 */
 }
 
 p {
@@ -32,7 +38,7 @@ p {
 
 .subheading {
     display: block;
-    font-size: 20px;
+    font-size: 0.56em; /* 20/36 = 0.56 */
     color: #d0aaff;
 }
 
