--- a/Aside/The Em Unit/index.css
+++ b/Aside/The Em Unit/index.css
@@ -10,22 +10,10 @@ body {
     background-image: linear-gradient( 135deg, #90e0ef 10%, #00b4d8 100%);
 }
 
-.container {
-    width: 680px;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 0 auto;
-}
-
-header {
-    padding-top: 30px;
-    margin-bottom: 30px;
-}
-
 h1 {
-    font-size: 3.25em;
+    font-size: 3.375em; /* 54px */
     font-family: 'Fugaz One', cursive;
-    margin: 0 0 8px;
+    margin: 0 0 0.222em;
 }
 
 h2 {
@@ -33,21 +21,45 @@ h2 {
     margin: 0;
 }
 
-h3 {
-    font-size: 1.5em; /* 24 / 16 = 1.5 */
-    width: 80%;
-    border-bottom: dotted 1px;
-    padding-bottom: 12px;
-    margin: 0 auto 16px;
-}
-
-/* 
-   Challenge: 
-     - Convert the font-size value of .total-wk from px to em
+/*
+ Challenge: Convert values from px to em
+   - Padding and margin values of the h3
+   - Padding value of .container
+   - Padding and margin values of the header
 */
 
+h3 {
+    font-size: 1.5em; /* 24px */
+    width: 80%;
+    border-bottom: dotted 1px;
+    padding-bottom: 0.5em;
+    margin: 0 auto 0.75em; /* 18 / 24 = 0.75 */
+}
+
+.container {
+    width: 680px;
+    padding: 1.25em; /* 20 / 16 = 1.25*/
+    border-radius: 10px;
+    margin: 0 auto;
+}
+
+header {
+    padding-top: 1.875em; /* 30 / 16 = 1.875 */
+    margin-bottom: 1.875em;
+}
+
+.day {
+    color: #355070;
+    text-align: center;
+    width: 20%;
+    padding: 1em;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 1px 4px #00b4d8;
+}
+
 .total-wk {
-    font-size: 1.125em; /* 18 / 16 = 1.125  */
+    font-size: 1.125em; /* 18px */
     letter-spacing: -1px;
 }
 
@@ -59,17 +71,7 @@ h3 {
 
 main {
     display: flex;
-    gap: 12px;
-}
-
-.day {
-    color: #355070;
-    text-align: center;
-    width: 20%;
-    padding: 15px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 1px 4px #00b4d8;
+    gap: 0.75em; /*  12 / 16 = 0.75 */
 }
 
 .distance,
