--- a/NFT Site/index.css
+++ b/NFT Site/index.css
@@ -13,12 +13,12 @@ h3 {
 
 h1 {
     color: whitesmoke;
-    font-size: 2.25rem;
+    font-size: 1.75rem;
 }
 
 h2 {
     color: #451c7a;
-    font-size: 1.75rem;
+    font-size: 1.375rem; /* update initial font-size */
     margin-top: 0;
 }
 
@@ -32,7 +32,7 @@ p {
 
 .subheading {
     display: block;
-    font-size: 1.25rem;
+    font-size: 1rem; /* update initial font-size */
     color: #d0aaff;
 }
 
@@ -54,11 +54,11 @@ a:active {
 
 .btn {
     font-size: 1.125rem;
+    text-align: center;
     font-weight: 500;
     text-decoration: none;
-    display: inline-block;
+    display: block;
     padding: 0.5em 1em;
-    margin-right: 0.5em;
     margin-bottom: 1em;
     border-radius: 4.6px;
 }
@@ -89,7 +89,7 @@ a:active {
 header, 
 section, 
 footer {
-    padding: 1.25em 0; /* 20/16 = 1.25 */
+    padding: 1.25em 0;
 }
 
 header, 
@@ -143,5 +143,26 @@ footer {
     section,
     footer {
         padding: 2.875em 0;        
+    }
+    
+    .btn {
+        display: inline-block;
+        margin-right: 0.5em;
+    }
+    
+    h1 {
+        font-size: 2.25rem;
+    }
+    
+    h2 {
+        font-size: 1.75rem;
+    }
+    
+    .subheading {
+        font-size: 1.25rem;
+    }
+    
+    p {
+        font-size: 1.125rem;
     }
 }
