--- a/NFT Site/index.css
+++ b/NFT Site/index.css
@@ -18,7 +18,7 @@ h1 {
 
 h2 {
     color: #451c7a;
-    font-size: 1.375rem; /* update initial font-size */
+    font-size: 1.375rem;
     margin-top: 0;
 }
 
@@ -32,7 +32,7 @@ p {
 
 .subheading {
     display: block;
-    font-size: 1rem; /* update initial font-size */
+    font-size: 1rem;
     color: #d0aaff;
 }
 
@@ -123,6 +123,26 @@ header,
 footer {
     text-align: center;
     color: #5f29a3;
+}
+
+/* ----- NAVIGATION ----- */
+
+nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.125rem;
+    padding: 0.85em 0;
+    display: block;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+
+li:not(:last-child) {
+    border-bottom: 1px dotted #a190b6;
 }
 
 /* ----- MEDIA QUERIES ----- */
