--- a/NFT Site/index.css
+++ b/NFT Site/index.css
@@ -141,10 +141,6 @@ ul {
     list-style-type: none;
 }
 
-li:not(:last-child) {
-    border-bottom: 1px dotted #a190b6;
-}
-
 /* ----- MEDIA QUERIES ----- */
 
 @media (min-width: 480px) {
@@ -156,6 +152,20 @@ li:not(:last-child) {
     .feature-image {
         width: 48.8%;        
     }
+}
+
+@media (max-width: 767px) {
+    header {
+        text-align: center;
+    }
+
+    nav {
+        margin-top: 1.5em;
+    }  
+
+    li:not(:last-child) {
+        border-bottom: 1px dotted #a190b6;
+    }  
 }
 
 @media (min-width: 768px) {
