--- a/NFT Site/index.css
+++ b/NFT Site/index.css
@@ -114,10 +114,19 @@ header,
     margin: 0 auto 2em;
 }
 
+.section-two-image-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
 .feature-image {
     width: 100%;
     border-radius: 4.6px;
-    margin-bottom: 1em;
+}
+
+.feature-item {
+    flex: 1 260px;
 }
 
 footer {
@@ -143,17 +152,6 @@ ul {
 
 /* ----- MEDIA QUERIES ----- */
 
-@media (min-width: 480px) {
-    .section-two-image-container {
-        display: flex;
-        justify-content: space-between;
-    }
-    
-    .feature-image {
-        width: 48.8%;        
-    }
-}
-
 @media (max-width: 767px) {
     header {
         text-align: center;
@@ -161,8 +159,8 @@ ul {
 
     nav {
         margin-top: 1.5em;
-    }  
-
+    }
+ 
     li:not(:last-child) {
         border-bottom: 1px dotted #a190b6;
     }  
@@ -173,6 +171,20 @@ ul {
     section,
     footer {
         padding: 2.875em 0;        
+    }
+    
+    header .container,
+    nav ul {
+        display: flex;
+    }
+    
+    header .container {
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    nav li {
+        margin-left: 1.25em;
     }
     
     .btn {
@@ -194,19 +206,5 @@ ul {
     
     p {
         font-size: 1.125rem;
-    }
-    
-    header .container, 
-    nav ul{
-        display: flex;
-    }
-    
-    nav li {
-        margin-left: 1.25em;
-    }
-    
-    header .container{
-        align-items: center;
-        justify-content: space-between;
     }
 }
