--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Source Sans Pro', sans-serif;
     color: #404040;
+    margin: 0;
 }
 
 /* =================
@@ -23,8 +24,13 @@ h1 {
 /* =================
     Intro
    ================= */
-   
+
 .intro { 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 250px;
+    text-align: center;
     color: #fff;
     background-color: #9480e4;
 }
