--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -9,7 +9,19 @@ body {
    ================= */
 
 h1 {
+    font-size: 2.5rem;
     font-weight: 400;
+    text-shadow: 0 2px #816fca;
+}
+
+h2 {
+    font-size: 2.25rem;
+    margin: 0.167em 0;
+}
+
+p {
+    font-size: 1.125rem;
+    line-height: 1.35;
 }
 
 .beta-text { 
@@ -19,6 +31,7 @@ h1 {
 .subheading {
     color: #575757;
     font-weight: 900;
+    margin-bottom: 0.5em;
 }
 
 /* =================
@@ -46,12 +59,11 @@ h1 {
 /* ====================
     Main content
    ==================== */
-
+   
 .main-content {
     align-items: center;
-    
-    padding-top: 2.5em; /* 40 / 16 = 2.5 */
-    padding-left: 2em; /* 32 / 16 = 2 */
+    padding-top: 2.5em;
+    padding-left: 2em;
     padding-right: 2em;
 }
 
