--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -24,6 +24,11 @@ p {
     line-height: 1.35;
 }
 
+.beta-text,
+.subheading{
+    text-transform: uppercase;
+}
+
 .beta-text { 
     font-weight: 900;
 }
@@ -80,3 +85,14 @@ p {
 /* =================
     Media queries 
    ================= */
+
+@media(min-width:576px){
+    body{
+        display: flex;
+    }
+
+    .intro,
+    .main-content{
+        width: 50%;
+    }
+} 
