--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -91,6 +91,18 @@ p {
         display: flex;
     }
 
+    h1 {
+        font-size: 5vw;
+    }
+    
+    h2 {
+        font-size: 2.625rem;
+    }
+    
+    .beta-text {
+        font-size: 1.25rem;
+    }
+
     .intro,
     .main-content{
         width: 50%;
