--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -39,6 +39,12 @@ p {
     text-transform: uppercase;
 }
 
+.fine-print {
+    font-size: 0.75rem;
+    letter-spacing: 1px;
+    color: #858585;
+}
+
 /* =================
     Flex containers
    ================= */
@@ -60,7 +66,8 @@ p {
     min-height: 250px;
     text-align: center;
     color: #fff;
-    background-color: #9480e4;
+    background: #9480e4 url("images/intro-bg.png");
+    background-size: cover;
 }
 
 /* ====================
@@ -80,7 +87,21 @@ p {
 /* =================
     Form
    ================= */
-   
+
+input {
+    font-family: inherit;
+    width: 100%;
+    padding: 0.5em;
+    margin-bottom: 0.75em;
+    border: 2px solid #d1d5db;
+    border-radius: 5px;
+}
+
+input:focus {
+    outline: none;
+    border-color: #8a71ec;
+    background-color: #e6e8ec;
+}
 
 /* =================
     Media queries 
