--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -88,19 +88,39 @@ p {
     Form
    ================= */
 
-input {
+input,
+button {
     font-family: inherit;
-    width: 100%;
+    width: 100%; 
+    border-radius: 5px;   
+}
+
+input {
     padding: 0.5em;
     margin-bottom: 0.75em;
     border: 2px solid #d1d5db;
-    border-radius: 5px;
 }
 
 input:focus {
     outline: none;
     border-color: #8a71ec;
     background-color: #e6e8ec;
+}
+
+.btn {
+    color: white;
+    text-transform: uppercase;
+    font-weight: 900;
+    letter-spacing: 1px;
+    padding: 1em 0;
+    background-color: #8a71ec;
+    margin-top: 1em;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: #b7a7f6;
 }
 
 /* =================
