--- a/Scrimbafy/styles.css
+++ b/Scrimbafy/styles.css
@@ -127,6 +127,29 @@ input:focus {
     background-color: #e6e8ec;
 }
 
+/* input[type="text"], 
+input[type="email"]{
+    padding: 1em;
+}
+
+input[type="file"]{
+    font-style: italic;
+    color: #575757;
+}
+
+input[type="file"]::file-selector-button {
+    color: rgb(93, 90, 90);
+    font-family: inherit;
+    padding: 0.5em 0.5em;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+input[type="file"]::file-selector-button:hover {
+    background-color: rgb(187, 183, 183);
+} */
+
 .btn {
     text-transform: uppercase;
     font-weight: 900;
