--- a/Aside/Grid Rows and Implicit Grid/index.css
+++ b/Aside/Grid Rows and Implicit Grid/index.css
@@ -6,8 +6,9 @@ html, body {
 .grid-container {
     border: 2px solid black;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 5em 5em;
+    /* grid-template-columns: 1fr 1fr;
+    grid-template-rows: 5em 5em; */
+    grid-template: 5em 5em / 1fr 1fr;
     gap: .5em;
 }
 
