--- a/CSS Grid/index.css
+++ b/CSS Grid/index.css
@@ -4,19 +4,43 @@ html, body {
     font-family: 'Manrope', sans-serif;
 }
 
-body{
+body {
     margin: 1em;
+}
+
+/* =================
+    Layout
+   ================= */
+   
+main {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1em;
+}
+
+@media (min-width: 500px) {
+/*
+Challenge:
+    1. Make our layout look like the screenshot. 
+    (📝 Try to write the least CSS possible.)  
+*/
+    main {
+        grid-template-columns: 1fr 1fr;
+    } 
+    .technology {
+        grid-column: span 2;
+    }
+    .nasa {
+        grid-row: span 2;
+    }
+    .health {
+        grid-column: span 2;
+    }  
 }
 
 /* =================
     Article Card 
    ================= */
-   
-main{
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1em;
-}
 
 a:hover, a:focus {
     filter: brightness(0.9);
